plugins {
    id "java"
}

group = "vanzay"
version = "1.0.0"
sourceCompatibility = "17"

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.apache.lucene:lucene-core:9.3.0'
    implementation 'org.apache.lucene:lucene-queryparser:9.3.0'

    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
}

test {
    useJUnitPlatform()
}
